// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInfo /> renders an error if loading failed 1`] = `
<div
  className="UserInfo"
>
  <p>
    Oops, Failed to load info!
  </p>
</div>
`;

exports[`<UserInfo /> renders the <UserCard /> if loading was successful 1`] = `
<div
  className="UserInfo"
>
  <div
    className="UserCard"
  >
    <h4>
      User Card
    </h4>
    <ul>
      <li>
        Name: 
        Welly
      </li>
      <li>
        Phone: 
        007
      </li>
      <li>
        Email: 
        test@gmail.com
      </li>
      <li>
        Website: 
        www.test.com
      </li>
    </ul>
  </div>
</div>
`;

exports[`<UserInfo /> renders the loading status if data invalid 1`] = `
<div
  className="UserInfo"
>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<UserInfo /> renders the loading status if requesting data 1`] = `
<div
  className="UserInfo"
>
  <p>
    Loading...
  </p>
</div>
`;
